# SentinelX

./: CLAUDE.md  CMakeLists.txt  USAGE_BINARY_ANALYSIS.md
claude/: task-1.md
include/: analyzer.h  arithmetic_analyzer.h  binary_parser.h  call_site_analyzer.h  detectors.h  disassembler.h  fsm.h  fsm.hpp  json_output.hpp  report.hpp  stack_analyzer.h  types.h  utils.h
src/: analyzer.cpp  arithmetic_analyzer.cpp  binary_parser.cpp  call_site_analyzer.cpp  detectors.cpp  disassembler.cpp  fsm.cpp  json_output.cpp  main.cpp  stack_analyzer.cpp  utils.cpp
test/: demo_vulnerable.c  test1.cpp  test_arithmetic  test_arithmetic.cpp  test_callsites  test_callsites.cpp  test_stack  test_stack.cpp
